# tfops-aug

./: .gitignore  LICENSE  README.md  augmentation_operations.py  augmentation_operations_test.py  augmentation_policies.py  augmentation_utils.py  augmentation_utils_test.py  benchmark_pipeline.py  benchmark_pipline.py  classification_example.py  common.py  data_generator.py  example.py  generate_previews.py  input_preprocess.py  preprocess_utils.py  publish.sh  pyproject.toml  requirements.txt  test.sh  tests.py
docker/: Dockerfile  docker_build.sh  docker_test.sh  docker_train.sh  requirements.txt
tfops_aug/: augmentation_operations.py  augmentation_policies.py  augmentation_utils.py  common.py
tfops_aug/tests/: augmentation_operations_test.py  augmentation_policies_test.py  augmentation_utils_test.py
utils/: benchmark_pipeline.py  classification_example.py  config.py  data_generator.py  generate_previews.py  preprocess_utils.py
